--- a/.github/workflows/python-doit.yml
+++ b/.github/workflows/python-doit.yml
@@ -2,7 +2,7 @@ name: Python Doit
 
 on:
   schedule:
-    - cron:  '10 * * * *'
+    - cron:  '20 * * * *'
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
     - name: python doit
       run: python script/make-data-python.py
       env:
-        ID4: ${{ secrets.ID4 }     
+        ID4: ${{ secrets.ID4 }}     
     - name: publish data.json
       uses: peaceiris/actions-gh-pages@v3
       with:
